--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,6 +1,3 @@
-@import url(
-'https://fonts.googleapis.com/css2?family=Bellefair&display=swap');
-  
 .App{
     width: 100vw;
     height: 100vh;
@@ -24,7 +21,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 20vw;
+    width: 25vw;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -73,6 +70,7 @@ button {
     -webkit-user-select: none;
     touch-action: manipulation;
     width: auto;
+    font-family: 'Indie Flower', 'Comic Sans', cursive;
 }
   
 button:hover {
@@ -85,8 +83,21 @@ button:focus {
     outline-offset: 2px;
 }
   
-@media (min-width: 768px) {
-    button {
-    padding: .75rem 1.5rem;
+@media (max-width: 320px) {
+    .winner {
+        width: 75vw;
     }
-};
+}
+
+@media (max-width: 375px) and (min-width: 321px) {
+    .winner {
+        width: 65vw;
+    }
+} 
+
+@media (max-width: 425px) and (min-width: 376px) {
+    .winner {
+        width: 55vw;
+    }
+} 
+
