--- a/src/css/board.css
+++ b/src/css/board.css
@@ -1,9 +1,9 @@
 :root {
-        
+    --input-border: 4px solid rgb(230, 230, 230);
 }
   
 .board{
-    width: 35vw;
+    width: 30vw;
     height: 50%;
     display: flex;
     align-items: flex-start;
@@ -11,10 +11,8 @@
     flex-wrap: wrap;
     }
 
-
 .input {
     color: darksalmon;
-    position: relative;
     font-size: 3rem;
     cursor: default;
     height: 33.33%;
@@ -23,38 +21,48 @@
     padding: 9px 0;
 }
   
- .input-1{
-    border-right: 4px solid rgb(230, 230, 230);
-    border-bottom: 4px solid rgb(230, 230, 230);
+ .input-1, .input-2, .input-4, .input-5{
+    border-right: var(--input-border);
+    border-bottom: var(--input-border);
 }
   
-.input-2{
-    border-right: 4px solid rgb(230, 230, 230);
-    border-bottom: 4px solid rgb(230, 230, 230);
+.input-3, .input-6{
+    border-bottom: var(--input-border);
 }
   
-.input-3{
-    border-bottom: 4px solid rgb(230, 230, 230);
+.input-7, .input-8{
+    border-right: var(--input-border);
+}
+
+@media (max-width: 320px) {
+    .board {
+    padding: 10px 0;
+    width: 65vw;
+    }
+    .input {
+        padding: 0;
+    }
 }
   
-.input-4{
-    border-right: 4px solid rgb(230, 230, 230);
-    border-bottom: 4px solid rgb(230, 230, 230);
+@media (max-width: 375px) and (min-width: 321px)  {
+    .board {
+    width: 65vw;
+    }
+
+    .input {
+        padding: 0;
+    }
 }
-  
-.input-5{
-    border-right: 4px solid rgb(230, 230, 230);
-    border-bottom: 4px solid rgb(230, 230, 230);
+
+@media (max-width: 425px) and (min-width: 376px)  {
+    .board {
+    width: 60vw;
+    padding: 10px 0;
+    }
+
+    .input {
+        padding: 0;
+    }
 }
-  
-.input-6{
-    border-bottom: 4px solid rgb(230, 230, 230);
-}
-  
-.input-7{
-    border-right: 4px solid rgb(230, 230, 230);
-}
-  
-.input-8{
-    border-right: 4px solid rgb(230, 230, 230);
-} 
+
+
