--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,4 +1,4 @@
-.App{
+.App {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -9,8 +9,16 @@
     backdrop-filter: 5px;
     background-color: rgb(32, 32, 32);
     background-image: url("https://janschreiber.github.io/img2/black-chalk.jpg");
+    padding-left: 20%;
+    padding-right: 20%;
 }
-  
+
+.board-container {
+    width: 70%;
+    padding-bottom: 70%;
+    position: relative;
+}
+
 .winner {
     transition: all ease-in .3s;
     display: flex;
@@ -21,32 +29,33 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 25vw;
+    width: 40%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -70%);
     background-color: rgba(195, 141, 158, 0.863);
     backdrop-filter: 5px;
-    padding: .5rem;
-    padding-bottom: 1rem;
-    border-radius: 10%;
-} 
-  
-.winner-text{
-    padding: .3em 1em .25em;    
+    padding: 2%;
+    border-radius: 15%;
+    z-index: 2;
+}
+
+.winner-text {
     font-weight: 600;
     font-size: 2.5rem;
     color: white;
-    position:relative;
+    position: relative;
     text-align: center;
-    line-height:1.3;
+    line-height: 1.3;
+    padding-bottom: 5%;
 }
-  
+
 .shrink {
     transform: scale(.1);
     opacity: 0;
 }
+
 button {
     background-color: #111827;
     border: 1px solid transparent;
@@ -63,8 +72,8 @@ button {
     text-decoration: none #6B7280 solid;
     text-decoration-thickness: auto;
     transition-duration: .2s;
-    transition-property: background-color, border-color, 
-      color, fill, stroke;
+    transition-property: background-color, border-color,
+        color, fill, stroke;
     transition-timing-function: cubic-bezier(.4, 0, 0.2, 1);
     user-select: none;
     -webkit-user-select: none;
@@ -72,32 +81,46 @@ button {
     width: auto;
     font-family: 'Indie Flower', 'Comic Sans', cursive;
 }
-  
+
 button:hover {
     background-color: #374151;
 }
-  
+
 button:focus {
     box-shadow: none;
     outline: 2px solid transparent;
     outline-offset: 2px;
 }
-  
-@media (max-width: 320px) {
-    .winner {
-        width: 75vw;
+
+
+@media screen and (min-width: 768px) {
+    .board-container {
+        width: 60%;
+        padding-bottom: 60%;
     }
 }
 
-@media (max-width: 375px) and (min-width: 321px) {
-    .winner {
-        width: 65vw;
+@media screen and (min-width: 1024px) {
+    .board-container {
+        width: 40%;
+        padding-bottom: 40%;
     }
-} 
+}
 
-@media (max-width: 425px) and (min-width: 376px) {
+@media screen and (min-width: 648px) {
     .winner {
-        width: 55vw;
+        width: 30%;
     }
-} 
+}
 
+@media screen and (min-width: 890px) {
+    .winner {
+        width: 25%;
+    }
+}
+
+@media screen and (min-width: 1098px) {
+    .winner {
+        width: 20%;
+    }
+}
